fix: avatar size and alignment

--- a/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
+++ b/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
@@ -2412,6 +2412,24 @@ html.rl-mobile #rl-app #V-AdminPane>.b-toolbar {
 /* #endregion */
 
 /*
+ * Extensions
+ */
+
+/* #region extensions */
+
+/* #region avatars */
+
+#rl-app .messageCheckbox .fromPic {
+    margin: -5px 0 -9px 8px;
+    height: 32px;
+    width: 32px;
+}
+
+/* #endregion */
+
+/* #endregion */
+
+/*
  * Message Flags
  */
 
